# ItsMrULPBot

./: README.md  app.py  bot.py  config.py  main.py  pyproject.toml  requirements.txt
core/: __init__.py  mongo.py  start.py
plugins/: all.py  filter.py  find.py  info.py  tools.py  ulp.py  up.py
utils/: logging_setup.py
